tests/baselines/reference/parserInterfaceDeclaration6.errors.txt
==== tests/cases/compiler/parserInterfaceDeclaration6.ts (1 errors) ====
    export export interface I {
           ~~~~~~
!!! parserInterfaceDeclaration6.ts(1,8): error TS1030: 'export' modifier already seen.
    }